# CoffeeAgent

./: .gitignore  README.md  install.bat  install.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
ui/: index.html  main.js  style.css
